<resources>
    <string name="app_name">Ch.Y.R</string>
    <string name="buttonStart">buttonStart</string>
    <string name="buttonStop">buttonStop</string>
    <string name="button_name_start">start</string>
    <string name="button_name_stop">WAIT!</string>
    <string name="text_name">Check Your Reaction</string>
    <string name="oneVSone">1 vs 1</string>
    <string name="onePlayer">one player</string>
    <string name="reset">reset</string>

    <string name="wow">Wow!</string>
    <string name="start">start</string>
    <string name="wait">WAIT!</string>
    <string name="hey">Hey?</string>
    <string name="win">WIN!</string>

</resources>