<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".OnePlayer">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStart"

        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="132dp"
        android:stateListAnimator="@null"
        android:text="@string/button_name_start"
        android:textColor="@color/white"

        android:textSize="35sp"

        app:backgroundTint="@color/dark_purple"

        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStop"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:backgroundTint="@color/black"
        android:stateListAnimator="@null"
        android:text="@string/button_name_stop"

        android:textSize="35sp"

        app:cornerRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReset"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/reset"
        android:textColor="@color/pink"

        app:cornerRadius="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />


    <ImageButton
        android:id="@+id/back_to_MainActivity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>